--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@tensorflow/tfjs": "^1.1.2",
     "@tensorflow/tfjs-node": "^1.1.2",
-    "mathjs": "^5.10.3",
-    "ml-pca": "^3.0.0"
+    "mathjs": "^5.10.3"
   }
 }
