--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^1.1.2",
     "@tensorflow/tfjs-node": "^1.1.2",
+    "dnode": "^1.2.2",
     "mathjs": "^5.10.3"
   }
 }
